# Agentic_AI

./: .gitignore  README.md  USER_GUIDE.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/agents/: __init__.py  performance_analyzer.py  rag_knowledge.py  web_search.py
backend/app/data/: __init__.py  demo_metrics.py  employees.db
backend/app/langgraph/: orchestrator.py
backend/app/routers/: __init__.py  agents.py  analysis.py  chat.py  files.py  kpi.py  metrics.py
backend/app/services/: agent_client.py  embeddings.py  file_extractor.py  llm.py  toolkit.py  vector_store.py
frontend/: Dockerfile  eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: BottleneckDisplay.tsx  FileUploader.tsx  KPIEditModal.tsx
frontend/src/data/: performanceMockData.ts
frontend/src/hooks/: useAutoResize.ts  useChat.ts  useKPI.ts  usePerformanceApplications.ts  useSidebar.ts
frontend/src/pages/: ChatPage.tsx  PerformanceDashboardPage.tsx  UploadsPage.tsx
frontend/src/styles/: index.css
frontend/src/types/: performance.ts  review.ts
performance-insight-hub-main/: README.md  index.html  tailwind.config.ts
performance-insight-hub-main/src/: index.css
performance-insight-hub-main/src/components/: ApplicationCard.tsx  ApplicationDetailModal.tsx  BrainstormModal.tsx  PerformanceChart.tsx  StatusBadge.tsx
performance-insight-hub-main/src/data/: mockData.ts
shared/: types.ts
(+22 files in other folders)
